@@ -5,7 +5,7 @@
 
 namespace CIAO_CSL_SRTest_CSL_SRTest_Connector_Impl
 {
-  CSL_SRTest_Connector_exec_i::CSL_SRTest_Connector_exec_i (const char * /*topic_name*/)
+  CSL_SRTest_Connector_exec_i::CSL_SRTest_Connector_exec_i (void)
     : DDS_Event_Connector_T<TestTopic_DDS_Traits, TestTopic_Connector_Traits> ()
   {
   }
@@ -22,9 +22,8 @@ namespace CIAO_CSL_SRTest_CSL_SRTest_Connector_Impl
 
     ACE_NEW_NORETURN (
       retval,
-      CSL_SRTest_Connector_exec_i ("Square")); //should be set by dep. plan.
+      CSL_SRTest_Connector_exec_i ());
 
     return retval;
   }
 }
-
